stream filter commited